--- a/index.html
+++ b/index.html
@@ -4,18 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
-
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
-
     <title>Frontend Mentor | Age calculator app</title>
-
 </head>
-
 <body>
     <div class="container">
         <div id="header-data">
@@ -40,7 +35,7 @@
                 <div class="submit-">
                     <hr>
                     <button type="submit" class="submit-btn">
-                    <img class="arrow" src="/assets/images/icon-arrow.svg" alt="icon" width="50">
+                    <img class="arrow" src="../assets/images/icon-arrow.svg" alt="icon" width="50">
                     </button>
                 </div>
             </form>
@@ -53,13 +48,10 @@
             </div>
         </div>
     </div>
-
     <div class="attribution">
         Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
         Coded by <a href="https://www.linkedin.com/in/katiuci-gabriele-neis-215395238/">Gabriele</a>.
       </div>
 </body>
-
 <script src="assets/main.js"></script>
-
 </html>
