--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <div class="submit-">
                     <hr>
                     <button type="submit" class="submit-btn">
-                    <img class="arrow" src="../assets/images/icon-arrow.svg" alt="icon" width="50">
+                    <img class="arrow" src="./assets/images/icon-arrow.svg" alt="icon" width="50">
                     </button>
                 </div>
             </form>
