--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" type="image/x-icon" href="./assets/images/favicon-32x32.png">
     <title>Frontend Mentor | Age calculator app</title>
 </head>
 <body>
@@ -35,7 +37,7 @@
                 <div class="submit-">
                     <hr>
                     <button type="submit" class="submit-btn">
-                    <img class="arrow" src="assets/images/icon-arrow.svg" alt="icon" width="50">
+                    <img class="arrow" src="./assets/images/icon-arrow.svg" alt="icon" width="50">
                     </button>
                 </div>
             </form>
